--- a/app/src/main/res/layout/recycler_list_cell.xml
+++ b/app/src/main/res/layout/recycler_list_cell.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="6dp"
@@ -21,7 +22,9 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:layout_gravity="top"/>
+            android:layout_gravity="top"
+            android:paddingStart="10dp"
+            tools:ignore="RtlSymmetry" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,7 +49,8 @@
                 android:minLines="2"
                 android:textSize="12sp"
                 android:layout_weight="2"
-                android:paddingLeft="20dp"/>
+                android:paddingStart="20dp"
+                tools:ignore="RtlSymmetry" />
         </LinearLayout>
 
 
